# bevy-test

./: .gitignore  Cargo.toml  notes.md
assets/shaders/: custom_material.wgsl  line_material.wgsl  line_material_white.wgsl  line_vertex_shader.wgsl
assets/shaders/grid1/: fragment.wgsl  ikeda_3.wgsl  sin.wgsl  vertex.wgsl
assets/shaders/utils/: sdf_utils.wgsl
libs/bevy_shader_utils/: Cargo.toml
libs/bevy_shader_utils/assets/shaders/: custom_material.wgsl
libs/bevy_shader_utils/src/: lib.rs
libs/bevy_shader_utils/src/materials/: pristine_grid.wgsl
libs/bevy_shader_utils/src/shaders/: perlin_noise_2d.wgsl  voronoise.wgsl
src/: main.rs  main.rs.bak  main.rs.wireframe
src/materials/: grid1.rs  line_material.rs  mod.rs  traits.rs
