[package]
name = "bevy-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_shader_utils = { path = "libs/bevy_shader_utils" }
bevy = { version = "0.13.2", features = ["file_watcher"] }
bevy_obj = "0.13"
